2007-08-10  Milan Crha  <mcrha@redhat.com>

	** Fix for bug #327977

	* proxy.c: (proxy_get_cnc): Added parent_window parameter
	and uses it in call of e_passwords_ask_password.
	* proxy.c: (proxy_commit), (proxy_page_changed_cb):
	Calls proxy_get_cnc, passing in parent window handle.
	* send-options.c: (get_cnc): Added parent_window parameter
	and uses it in call of e_passwords_ask_password.
	* send-options.c: (e_sendoptions_clicked_cb):
	Calls get_cnc, passing in parent window handle.

2007-08-03  Hiroyuki Ikezoe  <poincare@ikezoe.net>

	** Fix for bug #462010

	* proxy.c: (proxy_update_tree_view):
	* proxy-login.c: (proxy_login_update_tree): Plugged memory leak.

2007-07-29  Srinivasa Ragavan  <sragavan@novell.com>

	** Fix for bug #410287 from Lucky

	* status-track.c: (track_status):

2007-05-11  Gilles Dartiguelongue  <dartigug@esiee.fr>

	* mail-send-options.c: (org_gnome_composer_send_options):
	Fixes typo and casts, fixes part of bug #437584

2007-04-19  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #429422

	* status-track.c (track_status):
	Use gtk_widget_set_size_request() instead of gtk_widget_set_usize().

2007-03-30  Sankar P  <psankar@novell.com>

	* status-track.c: (format_date), (track_status):
	Rewritten GroupWise Status Tracking

2007-03-20  Matthew Barnes  <mbarnes@redhat.com>

	** Fixes part of bug #419524

	* Include <glib/gi18n.h> instead of <libgnome/gnome-i18n.h>.

2007-02-05  Sankar P  <psankar@novell.com>

        * junk-settings.c:
	Include missing header file

2007-01-27  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>
	* install-shared.c: (org_gnome_popup_wizard):
	don't split sentences. Fixes bug #401288.

2007-01-27  Nickolay V. Shmyrev  <nshmyrev@yandex.ru>

	* install-shared.c: (org_gnome_popup_wizard):
	* junk-settings.c: (junk_settings_construct):
	* share-folder.c: (share_folder_construct):
	* status-track.c: (track_status):
	mark strings as translatable. See bug #399381 for details.
