@@ -1,3 +1,11 @@
+2007-08-13  Sankar P  <psankar@novell.com>
+
+	** Fix for bug #330968
+
+	* proxy.c: (proxy_page_changed_cb):
+	Fixes a crash on account-editor.
+	Proxy Preferences Crash Fix.
+
 2007-08-10  Milan Crha  <mcrha@redhat.com>
 
 	** Fix for bug #327977
